<resources>
    <string name="app_name">Supnet</string>
    <string name="btn_join">Join</string>
    <string name="txt_connection_closed">Connection closed !</string>
    <string name="room_creator_label">Enter room name :</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="rooms_toolbar_title">Rooms</string>
    <string name="rooms_not_available">There are no rooms at the moment.\nYou can always create some !</string>
    <string name="room_leave_question">You are going to leave the room.\nAre you sure ?</string>
    <string name="hint_email">Email address</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="btn_register">Create account</string>
    <string name="btn_back_to_sign_in">Back to sign in</string>
    <string name="txt_welcome">Welcome to Supnet !</string>
    <string name="txt_gadgets">Gadgets</string>
    <string name="txt_friends">Friends</string>
    <string name="txt_invitation">Friendship invitation</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_search">Search</string>
    <string name="txt_add_friend">Add Friend</string>
    <string name="txt_connect">Connect</string>
    <string name="txt_sign_out">Sign out</string>
    <string name="txt_sign_off">Delete accout</string>
    <string name="hint_friend_name">Friend username :</string>
    <string name="hint_invitation_message">Short message :</string>
    <string name="txt_accept_invitation">Accept</string>
    <string name="txt_reject_invitation">Reject</string>
    <string name="txt_send">Send</string>
</resources>
