<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_friends"
        android:enabled="true"
        android:icon="@drawable/ic_people_outline_white_24dp"
        android:title="@string/txt_friends"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_gadgets"
        android:enabled="true"
        android:icon="@drawable/ic_device_hub_white_24dp"
        android:title="@string/txt_gadgets"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/txt_settings"
        app:showAsAction="ifRoom" />

</menu>